# welt-io-strands

./: .gitignore  README.md  compatibility.sh  mise.toml  pyproject.toml  validate.sh
.github/workflows/: compatibility.yml  release.yml  renovate.yml  validate.yml
examples/agent/: README.md  main.py
src/welt_io/: __init__.py
tests/: test_decode_file_blocks.py  test_decode_interrupt_responses.py  test_decode_messages.py  test_file_event.py  test_interrupt_reason.py  test_renderable_events.py  test_version.py
